--- a/www/css/index.css
+++ b/www/css/index.css
@@ -666,7 +666,13 @@ span .ui-icon .ui-icon-plus{
     color: #fff;
     padding: 20px 15px;
     margin: 0 -15px;
-       
+    font-weight:  400; 
+}
+.lowlight{
+    background: rgb(210, 210, 210); 
+    padding: 15px 15px;
+    margin: 0 -15px;
+    font-weight:  400; 
 }
 
 /* Maps */
