--- a/www/css/style.css
+++ b/www/css/style.css
@@ -230,6 +230,11 @@ i.icon.ion-loading-c {
     border-radius: 0; 
 }
 
+.article-detail{
+    background-color: rgba(255,255,255,.85); 
+    padding-bottom: 20px;
+}
+
 .article h4{
     
   text-align: center;
@@ -237,7 +242,6 @@ i.icon.ion-loading-c {
   color: rgb(255, 170, 0);
   margin: 0;
   padding: 10px 0;
-  background-color: rgb(235,235,235);
     
 }
 .article span{
