--- a/www/css/style.css
+++ b/www/css/style.css
@@ -290,7 +290,7 @@ img.section-main{
     box-shadow: 0 0 5px rgba(111, 111, 111, 0.85);
 }
 
-.fagan, .brennan, .shelley, .ndo, .byrne, .fahey, .twigg, .ryan, .quigley{
+.fagan, .fagan-inv, .brennan, .shelley, .ndo, .byrne, .fahey, .twigg, .ryan, .quigley{
     -webkit-background-size: cover; 
     -moz-background-size: cover; 
     -o-background-size: cover; 
@@ -298,6 +298,9 @@ img.section-main{
 }
 .fagan{
        background-image: url('../images/content/fagan.png');
+}
+.fagan-inv{
+       background-image: url('../images/content/fagan-inv.png');
 }
 .brennan{
        background-image: url('../images/content/brennan.png');
