--- a/www/templates/main.html
+++ b/www/templates/main.html
@@ -8,7 +8,7 @@
         </ion-nav-buttons>
     </ion-nav-bar>
 
-    <ion-pane class="main">
+    <ion-pane class="main" overflow-scroll="false">
         <ion-list class="contact-list">
             <ion-item class="item-icon-right" href="#/app/contact">
                 <h4>Get in touch</h4>
