--- a/www/templates/main.html
+++ b/www/templates/main.html
@@ -8,14 +8,14 @@
         </ion-nav-buttons>
     </ion-nav-bar>
 
-    <ion-pane class="main" has-bouncing="false">
+    <ion-content class="main" has-bouncing="false">
         <ion-list class="contact-list">
             <ion-item class="item-icon-right" href="#/app/contact">
                 <h4>Get in touch</h4>
-                <p>call, mail and social media details</p>
+                <p>contact and social media details</p>
                 <i class="icon ion-ios7-more-outline contact-item"></i>
             </ion-item>
         </ion-list>
-    </ion-pane>
+    </ion-content>
     
 </ion-view>
