--- a/www/templates/main.html
+++ b/www/templates/main.html
@@ -8,7 +8,7 @@
         </ion-nav-buttons>
     </ion-nav-bar>
 
-    <ion-content class="main" has-bouncing="false">
+    <ion-pane class="main">
         <ion-list class="contact-list">
             <ion-item class="item-icon-right" href="#/app/contact">
                 <h4>Get in touch</h4>
@@ -16,6 +16,6 @@
                 <i class="icon ion-ios7-more-outline contact-item"></i>
             </ion-item>
         </ion-list>
-    </ion-content>
+    </ion-pane>
     
 </ion-view>
