--- a/www/templates/contact.html
+++ b/www/templates/contact.html
@@ -9,7 +9,7 @@
             </div>
         </ion-nav-buttons>
     </ion-nav-bar>
-    <ion-content class="contact" has-bouncing="false">
+    <ion-pane class="contact">
         <ion-list class="contact-list">
             <ion-item class="item-icon-right" href="tel:0035318999350">
                 <h4>Call</h4>
@@ -33,6 +33,6 @@
             </ion-item>
         </ion-list>
 
-    </ion-content>
+    </ion-pane>
     
 </ion-view>
